# RISC-V-LexicalAnalyzer

./: CMakeLists.txt  Makefile  README.md  output.txt  output_datastructure.txt  sampleInput.txt
include/: analyzer.h  data.h  datastructure_generator.h  helper.h  input.h  output.h  rules.h  rules_checker.h  three_op.h  two_op.h  zero_op.h
include/old/: analyzer.h  input.h  main.cpp  rules_checker.h
src/: main.cpp
